--- a/app/src/main/res/layout/activity_step3.xml
+++ b/app/src/main/res/layout/activity_step3.xml
@@ -63,7 +63,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.061"
-        app:srcCompat="@drawable/step2" />
+        app:srcCompat="@drawable/step3" />
 
     <ScrollView
         android:layout_width="374dp"
@@ -126,6 +126,7 @@
                 android:weightSum="2">
 
                 <Button
+                    android:id="@+id/refuse_button"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
@@ -135,6 +136,7 @@
                     android:text="I refuse" />
 
                 <Button
+                    android:id="@+id/accept_button"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
