--- a/app/src/main/res/layout/activity_logs.xml
+++ b/app/src/main/res/layout/activity_logs.xml
@@ -118,12 +118,14 @@
         android:id="@+id/log_button"
         android:layout_width="370dp"
         android:layout_height="40dp"
+        android:layout_marginTop="288dp"
         android:backgroundTint="#0468FF"
         android:fontFamily="@font/poppins_medium"
         android:text="Log Glucose Level Today"
         app:icon="@drawable/ic_plus"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="274dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
