--- a/app/src/main/res/layout/activity_recipe_choose_meat.xml
+++ b/app/src/main/res/layout/activity_recipe_choose_meat.xml
@@ -7,15 +7,30 @@
     android:layout_height="match_parent"
     tools:context=".RecipeChooseMeat">
 
-    <!-- Example content for Meat screen -->
-    <TextView
+    <!-- Back Button Icon -->
+    <ImageView
+        android:id="@+id/back_button_recipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Meat Recipes"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:layout_margin="16dp"
+        android:contentDescription="@string/back_button_recipe_meat"
+        app:srcCompat="@drawable/recipe_back_btn"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp" />
+
+    <!-- "Meat" Title -->
+    <TextView
+        android:id="@+id/meat_title_head"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/meat_proteins"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/poppins_medium"
+        app:layout_constraintTop_toTopOf="@+id/back_button_recipe"
+        app:layout_constraintBottom_toBottomOf="@+id/back_button_recipe"
+        app:layout_constraintStart_toEndOf="@+id/back_button_recipe"
+        android:layout_marginStart="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
