--- a/app/src/main/res/layout/activity_specific_blog.xml
+++ b/app/src/main/res/layout/activity_specific_blog.xml
@@ -130,8 +130,12 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/poppins_light"
                         android:text="."
+                        android:lineSpacingExtra="4dp"
+                        android:firstBaselineToTopHeight="24dp"
                         android:textColor="#424242"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:justificationMode="inter_word"
+                        android:textAlignment="viewStart" />
 
                 </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
