--- a/app/src/main/res/layout/activity_recipe_choose_meat.xml
+++ b/app/src/main/res/layout/activity_recipe_choose_meat.xml
@@ -5,36 +5,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RecipeChooseMeat">
+    android:layout_height="match_parent">
 
-    <!-- Back Button Icon -->
+    <!-- Back Button -->
     <ImageView
-        android:id="@+id/back_button_recipe_meat"
+        android:id="@+id/back_button_recipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="@+string/back_button_meat"
+        android:contentDescription="@string/back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/recipe_back_btn" />
 
-    <!-- "Meat" Title -->
+    <!-- Title -->
     <TextView
         android:id="@+id/meat_title_head"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="@string/meat_proteins"
+        android:text="Proteins"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/back_button_recipe_meat"
-        app:layout_constraintStart_toEndOf="@+id/back_button_recipe_meat"
-        app:layout_constraintTop_toTopOf="@+id/back_button_recipe_meat" />
+        app:layout_constraintBottom_toBottomOf="@+id/back_button_recipe"
+        app:layout_constraintStart_toEndOf="@+id/back_button_recipe"
+        app:layout_constraintTop_toTopOf="@+id/back_button_recipe" />
 
-    <!-- Select Proteins Text -->
+    <!-- Instruction Text -->
     <TextView
         android:id="@+id/select_meats_text"
         android:layout_width="wrap_content"
@@ -42,11 +41,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Select Meat/Proteins"
+        android:text="Select Proteins"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button_recipe_meat" />
+        app:layout_constraintTop_toBottomOf="@+id/back_button_recipe" />
 
     <!-- Help Text -->
     <TextView
@@ -57,14 +56,14 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="@string/tap_on_proteins_to_select_them_for_your_recipe"
+        android:text="Tap on meat/proteins to select them for your recipe"
         android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/select_meats_text" />
 
-    <!-- Meats RecyclerView -->
+    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/meats_recycler_view"
         android:layout_width="0dp"
@@ -84,12 +83,12 @@
         android:id="@+id/confirm_meats_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/rounded_button_bg"
         android:fontFamily="@font/poppins_medium"
-        android:text="@string/confirm_selection"
+        android:text="Confirm Selection"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
