adjusted layout of confirm button

--- a/app/src/main/res/layout/activity_recipe_choose_fruit.xml
+++ b/app/src/main/res/layout/activity_recipe_choose_fruit.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="80dp"
+    >
 
     <!-- Back Button -->
     <ImageView
@@ -71,7 +73,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/confirm_fruits_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="128dp"
         android:background="@drawable/rounded_button_bg"
         android:fontFamily="@font/poppins_medium"
         android:text="Confirm Selection"
