--- a/app/src/main/res/layout/activity_recipe_choose_fruit.xml
+++ b/app/src/main/res/layout/activity_recipe_choose_fruit.xml
@@ -81,7 +81,7 @@
         tools:listitem="@layout/item_fruit" />
 
     <!-- Confirm Button -->
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/confirm_fruits_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
