--- a/app/src/main/res/layout/activity_recipe_choose_vegetable.xml
+++ b/app/src/main/res/layout/activity_recipe_choose_vegetable.xml
@@ -80,7 +80,7 @@
         tools:listitem="@layout/item_vegetable" />
 
     <!-- Confirm Button -->
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/confirm_vegetables_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
